Fixed background button alignment

--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ div.bar button {
 #taskbar > div {
     display: flex;
     flex-direction: row;
+    align-items: center;
     gap: 0.5em;
 }
 
